--- a/style.css
+++ b/style.css
@@ -619,6 +619,9 @@ header .socials ul li a:hover {
   #projects .container .card3 {
     background: url(images/Screenshot\ 2024-11-07\ 212318.png);
   }
+  #projects .container .card4 {
+    background: url(images/Screenshot\ 2024-11-08\ 012342.png);
+  }
 .reveal {
   position: relative;
   -webkit-transform: translateY(5rem);
